--- a/index.html
+++ b/index.html
@@ -1,10 +1,4 @@
 <!DOCTYPE HTML>
-<!--
-	Spectral by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
-
 <html>
 	<head>
 		<title>Splimter</title>
@@ -119,7 +113,7 @@
 							<li><a href="mailto:soheybemir@gmail.com" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
 						</ul>
 						<ul class="copyright">
-							<li>&copy; Splimter</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+							<li>&copy; Splimter</li>
 						</ul>
 					</footer>
 
